--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "test": "jest"
   },
-  "author": "",
+  "author": "Giselle Fuselier",
   "license": "MIT",
   "dependencies": {
     "inquirer": "^8.2.4"
